test/main/com/ocaml/sdk/output/errors/mismatch/declaration_inverted/file.mli
module type Something = sig
    type t
	val empty: int
	val add: int -> int
end

module Make (X: Set.OrderedType) : Something with type t = X.t